# fluorite

./: .gitignore  ARCHITECTURE.md  CLA.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  devnotes.md  eventbus_comparison.md  logic.md  test_plan.md
.claude/: CLAUDE.md  (+1 more)
crates/flourine-cli/: Cargo.toml  README.md
crates/flourine-cli/src/: bootstrap.rs  client.rs  lib.rs  main.rs  schema.rs  tail.rs  topic.rs  write.rs
crates/flourine-cli/tests/: integration.rs
crates/flourine-core/: Cargo.toml
crates/flourine-core/src/: lib.rs  main.rs
crates/flourine-core/src/avro/: README.md
crates/flourine-core/src/buffer/: avro_converter.rs  error.rs  parquet_writer.rs  service.rs
crates/flourine-iceberg/: Cargo.toml
crates/flourine-iceberg/benches/: record_converter.rs
crates/flourine-iceberg/src/: catchup.rs  config.rs  error.rs  iceberg_buffer.rs  iceberg_writer.rs  lib.rs  record_converter.rs  schema_evolution.rs  schema_mapping.rs  tracking.rs
crates/flourine-schema/: Cargo.toml
crates/flourine-schema/src/: api.rs  canonical.rs  compat.rs  error.rs  lib.rs  registry.rs
crates/flourine-sdk/: Cargo.toml
crates/flourine-sdk/src/: error.rs  lib.rs  writer.rs
crates/flourine-sdk/src/reader/: mod.rs
crates/flourine-wire/: Cargo.toml  build.rs
crates/flourine-wire/src/: lib.rs  proptest_tests.rs  proto.rs  proto_conv.rs  reader.rs  record.rs  status.rs  union.rs  varint.rs  writer.rs
crates/fluorite-broker/: Cargo.toml
crates/fluorite-broker/benches/: BENCHMARK_RESULTS.md
crates/fluorite-broker/benches/common/: config.rs  fixtures.rs  metrics.rs  mod.rs
crates/fluorite-broker/benches/db/: commit.rs  coordinator.rs
crates/fluorite-broker/benches/micro/: buffer.rs  fl.rs  wire.rs
crates/fluorite-broker/src/: buffer.rs  dedup.rs  error.rs  fl.rs  lib.rs  metrics.rs  object_store.rs  shutdown.rs
crates/fluorite-broker/src/admin/: acls.rs  api_keys.rs  groups.rs  middleware.rs  mod.rs  topics.rs
crates/fluorite-broker/src/auth/: acl.rs  api_key.rs  error.rs  mod.rs  principal.rs
crates/fluorite-broker/src/batched_server/: append.rs  authz.rs  encoding.rs  fetch.rs  flush.rs  mod.rs  read.rs  reader_group.rs
crates/fluorite-broker/src/coordinator/: db.rs  mod.rs
crates/fluorite-broker/tests/: admin_api_integration.rs  auth_integration.rs  coordinator_integration.rs  cross_language_e2e.rs  db_integration.rs  e2e_auth.rs  e2e_load.rs  e2e_reader_groups.rs  e2e_write.rs  integration.rs  jepsen_backpressure.rs  jepsen_chaos_workload.rs  jepsen_crash.rs  jepsen_dedup_pressure.rs  jepsen_exactly_once.rs  jepsen_fl_corruption.rs  jepsen_idempotent.rs  jepsen_linearizability.rs  jepsen_multi_broker.rs  jepsen_multi_topic.rs  jepsen_network_partition.rs  jepsen_offset.rs  jepsen_partial_commit.rs  jepsen_partial_write.rs  jepsen_partition.rs  jepsen_pipelined_flush.rs  jepsen_postgres_failure.rs  jepsen_process_pause.rs  jepsen_read_faults.rs  jepsen_reader_churn.rs  jepsen_reader_group_chaos.rs  jepsen_reader_groups.rs  jepsen_shutdown.rs  negative_tests.rs
crates/fluorite-broker/tests/common/: db.rs  fault_injection.rs  mod.rs  operation_history.rs  ws_helpers.rs
crates/fluorite-cli/: Cargo.toml  README.md
crates/fluorite-cli/src/: bootstrap.rs  client.rs  lib.rs  main.rs  schema.rs  tail.rs  topic.rs  write.rs
crates/fluorite-cli/tests/: integration.rs
crates/fluorite-iceberg/: Cargo.toml
crates/fluorite-iceberg/benches/: record_converter.rs
crates/fluorite-iceberg/src/: catchup.rs  config.rs  error.rs  iceberg_buffer.rs  iceberg_writer.rs  lib.rs  record_converter.rs  schema_evolution.rs  schema_mapping.rs  tracking.rs
crates/fluorite-sdk/: Cargo.toml
crates/fluorite-sdk/src/: error.rs  lib.rs  writer.rs
crates/fluorite-sdk/src/reader/: mod.rs
crates/fluorite-whitepaper/: Cargo.toml  README.md
crates/fluorite-whitepaper/src/: main.rs
crates/fluorite-whitepaper/typst/: eventbus_whitepaper.typ
crates/fluorite-wire/: Cargo.toml  build.rs
crates/fluorite-wire/src/: auth.rs  error.rs  lib.rs  proptest_tests.rs  proto.rs  proto_conv.rs  reader.rs  record.rs  status.rs  union.rs  varint.rs  writer.rs
crates/turbine-agent/: Cargo.toml
crates/turbine-agent/benches/: BENCHMARK_RESULTS.md  criterion.rs
crates/turbine-agent/benches/common/: config.rs  fixtures.rs  mod.rs
crates/turbine-agent/benches/db/: commit.rs  coordinator.rs  mod.rs
crates/turbine-agent/benches/micro/: buffer.rs  mod.rs  tbin.rs  wire.rs
crates/turbine-agent/src/: batched_server.rs  buffer.rs  coordinator.rs  dedup.rs  error.rs  lib.rs  metrics.rs  object_store.rs  server.rs  shutdown.rs  tbin.rs
crates/turbine-agent/src/admin/: acls.rs  groups.rs  middleware.rs  mod.rs  topics.rs
crates/turbine-agent/src/auth/: acl.rs  error.rs  mod.rs  principal.rs
crates/turbine-agent/tests/: admin_api_integration.rs  auth_integration.rs  coordinator_integration.rs  cross_language_e2e.rs  db_integration.rs  e2e_consumer_groups.rs  e2e_load.rs  e2e_reader_groups.rs  e2e_websocket.rs  integration.rs  jepsen_crash.rs  jepsen_linearizability.rs  jepsen_offset.rs  jepsen_partition.rs  jepsen_reader_groups.rs  negative_tests.rs
crates/turbine-agent/tests/common/: mod.rs
crates/turbine-sdk/: Cargo.toml
crates/turbine-sdk/src/: consumer.rs  error.rs  lib.rs  producer.rs  reader.rs  writer.rs
crates/turbine-whitepaper/: Cargo.toml  README.md
crates/turbine-whitepaper/src/: main.rs
crates/turbine-wire/: Cargo.toml  build.rs
crates/turbine-wire/src/: auth.rs  consumer.rs  error.rs  lib.rs  message.rs  producer.rs  proptest_tests.rs  proto.rs  reader.rs  record.rs  status.rs  union.rs  writer.rs
sdks/python/: README.md  pyproject.toml
sdks/python/flourine/: __init__.py  _admin.py  _schema.py  client.py  exceptions.py  reader.py  writer.py
sdks/python/fluorite/: __init__.py  _admin.py  _schema.py  client.py  exceptions.py  reader.py  writer.py
sdks/python/tests/: __init__.py  test_client.py  test_protocol_compat.py  test_reader.py  test_schema.py  test_writer.py
sdks/python/turbine/: __init__.py  exceptions.py  reader.py  writer.py
src/: lib.rs  (+1 more)
(+471 files in other folders)
