[package]
name = "turbine"
version = "0.1.0"
edition = "2024"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP server
axum = { version = "0.7", features = ["macros"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "compression-gzip"] }

# Avro support
apache-avro = { version = "0.17", features = ["snappy", "zstandard"] }

# Arrow and Parquet
arrow = { version = "53" }
parquet = { version = "53", features = ["arrow", "snap", "zstd", "lz4"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
thiserror = "1"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Utilities
bytes = "1"
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
parking_lot = "0.12"

[dev-dependencies]
tempfile = "3"
tokio-test = "0.4"
tower = { version = "0.4", features = ["util"] }
http-body-util = "0.1"
