[package]
name = "flourine-core"
version = "0.1.0"
edition = "2024"

[lib]
name = "flourine_core"
path = "src/lib.rs"

[[bin]]
name = "flourine"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP server
axum = { version = "0.7", features = ["macros"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "compression-gzip"] }

# Arrow and Parquet
arrow = { version = "57" }
parquet = { version = "57", features = ["arrow", "snap", "zstd", "lz4"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Avro
apache-avro = "0.17"
integer-encoding = { version = "4", default-features = false }
num-traits = "0.2"
rust_decimal = { version = "1", default-features = false, features = ["serde-with-str"] }
serde_derive = "1"
serde_serializer_quick_unsupported = "0.1"
serde-transcode = "1"

# Error handling
thiserror = "1"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Utilities
bytes = "1"
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
parking_lot = "0.12"

# Arena allocation
bumpalo = { version = "3", features = ["collections"] }

[dev-dependencies]
tempfile = "3"
tokio-test = "0.4"
tower = { version = "0.4", features = ["util"] }
http-body-util = "0.1"
criterion = "0.5"
pretty_assertions = "1"
