[package]
name = "flourine-iceberg"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
flourine-common = { path = "../flourine-common" }
flourine-core = { path = "../flourine-core" }
flourine-schema = { path = "../flourine-schema" }
flourine-wire = { path = "../flourine-wire" }

# Arena allocation
bumpalo = { version = "3", features = ["collections"] }

# Iceberg
iceberg = "0.8"
iceberg-catalog-sql = "0.8"

# Arrow / Parquet
arrow = { version = "57", features = ["prettyprint"] }
parquet = { version = "57", features = ["arrow", "zstd"] }

# Avro
apache-avro = { workspace = true }

# Database
sqlx = { workspace = true }

# Async
tokio = { workspace = true }
futures = "0.3"

# Data
bytes = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Numeric
rust_decimal = { version = "1", default-features = false }

# Compression
zstd = "0.13"

# Error handling
thiserror = { workspace = true }

# Observability
tracing = "0.1"

[[bench]]
name = "record_converter"
harness = false

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
tempfile = "3"
criterion = "0.5"
rand = "0.8"
