[package]
name = "flourine-schema"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
flourine-common = { path = "../flourine-common" }

# Database
sqlx = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Hashing
sha2 = "0.10"

# Avro schema parsing and compatibility
apache-avro = { workspace = true }

# Async
tokio = { workspace = true }

# Time
chrono = { workspace = true }

# Error handling
thiserror = { workspace = true }

# HTTP API
axum = { workspace = true }
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Tracing
tracing = "0.1"

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
