[package]
name = "turbine-sdk"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
turbine-common = { path = "../turbine-common" }
turbine-wire = { path = "../turbine-wire" }

# Async runtime
tokio = { workspace = true }
futures = "0.3"

# WebSocket
tokio-tungstenite = "0.24"

# Data handling
bytes = { workspace = true }
uuid = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Tracing
tracing = "0.1"

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "time"] }
